@@ -1,8 +1,6 @@
 #ifndef QMPLAY2CORE_HPP
 #define QMPLAY2CORE_HPP
 
-#define QMPlay2Version "16.04.19"
-
 #include <QAtomicInt>
 #include <QObject>
 #include <QIcon>
