@@ -1,0 +1,6 @@
+#ifndef VERSION_HPP
+#define VERSION_HPP
+
+#define QMPlay2Version "16.04.20"
+
+#endif // VERSION_HPP
